<resources>
    <string name="app_name">MonthlyExpenses</string>
    <string name="app_title">Monthly Expenses</string>
    <string name="expense">Expense</string>
    <string name="total">Total</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="concept">Concept</string>
    <string name="add">Add</string>
    <string name="dollarsign" translatable="false">$</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description_edit_button">Button to edit the expense item</string>
    <string name="description_button_delete">Button to delete expense item</string>
    <string name="description_button_add_new_comment">Add new comment</string>
    <string name="update_button">Update</string>
    <string name="monthlyExpenses">Month Total</string>
    <string name="month">Month</string>
    <string name="dollarsingVariable" translatable="false">$%1$s</string>
    <string name="dollasingTotal" translatable="false">Total: $%1$s</string>
    <string name="period">Period</string>
    <string name="concept_title">Concept Title</string>
    <string name="first_half_of_the_month">First Half</string>
    <string name="second_half_of_the_month">Second Half</string>
    <string name="date">Date</string>
    <string name="bank_account"> Bank Account</string>
    <string name="emptyEditText">Dont leave Items and prices blank</string>
    <string name="all_field_must_be_filled">"All fields must be filled"</string>
    <string name="budget">Budget</string>
    <string name="add_income">Add Income</string>
    <string name="total_of_the_month">Totals of the month</string>
    <string name="budgets_of_the_month">Budgets of the month</string>
    <string name="remaining">Remaining</string>
    <string name="error_budget">You dont have a budget for this month, please add one.</string>
    <string name="error_budget2">You have not added a budget for this month</string>
    <string name="add_or_edit_budget_for_this_month" translatable="false">Add or Edit Budget</string>
    <string name="budget_for_month">Budget for month:</string>
    <string name="budget_for_second_fortnight">Second fortnight</string>
    <string name="budget_for_first_fortnight">First fortnight</string>
    <string name="You_cant_add_a_budget_when_seeing_all_expenses">You can\'t add a budget when seeing all expenses.</string>
    <string name="You_have_deleted">You have deleted %1$s</string>
    <string name="All_Expenses">All Expenses</string>
    <string name="You_must_set_a_concept">You must set a concept!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="add_bank_entity">Add bank entity</string>
    <string name="settings">Settings</string>
</resources>