<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="item"
            type="data.Items" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="false"
            android:focusable="true"
            android:hint="@string/item"
            android:inputType="textAutoCorrect|text|textCapSentences"
            android:text="@={item.item}"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/dollarsign"
            android:textSize="18sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="false"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:text="@={item.price}"
            android:textSize="18sp" />

    </LinearLayout>
</layout>