<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.monthlyexpenses.expenses.ExpensesListFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_expense_list">
        <action
            android:id="@+id/action_navigation_home_to_addNewExpense"
            app:destination="@id/addNewExpense" />
    </fragment>
    <fragment
        android:id="@+id/navigation_bank"
        android:name="com.example.monthlyexpenses.bank.BankFragment"
        android:label="@string/bank_account"
        tools:layout="@layout/fragment_bank" />
    <fragment
        android:id="@+id/addNewExpense"
        android:name="com.example.monthlyexpenses.expenses.AddNewExpense"
        android:label="@string/add_expense"
        tools:layout="@layout/activity_add_new_expense">
        <argument
            android:name="flag"
            app:argType="integer" />
        <argument
            android:name="expenseObject"
            app:argType="model.Expenses" />
        <action
            android:id="@+id/action_addNewExpense_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>