<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".HalfMonthTotals">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:paddingStart="35dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_half_of_the_month"
            android:textSize="@dimen/totalsFragmentSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstHalf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/red"
            android:textSize="@dimen/totalsFragmentSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingStart="35dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_half_of_the_month"
            android:textSize="@dimen/totalsFragmentSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondHalf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/red"
            android:textSize="@dimen/totalsFragmentSize" />
    </LinearLayout>
</LinearLayout>