<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="expenses"
            type="com.example.monthlyexpenses.data.expenses.Expenses" />

        <variable
            name="viewmodel"
            type="com.example.monthlyexpenses.expenses.expensesadd.ExpensesAddViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".expenses.expensesadd.AddNewExpense">

            <EditText
                android:id="@+id/etConcept"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints="false"
                android:cursorVisible="true"
                android:text="@={viewmodel.concept}"
                android:defaultFocusHighlightEnabled="true"
                android:elegantTextHeight="true"
                android:ems="10"
                android:focusedByDefault="true"
                android:hint="@string/concept"
                android:inputType="textAutoCorrect|text|textCapSentences|textAutoComplete" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_list_recyclerView"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:isScrollContainer="true"
                android:overScrollMode="never"
                android:clipToPadding="false"
                tools:listitem="@layout/list_item_edit_text">


            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/addNewComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{()-> viewmodel.addEditText()}"
                    android:contentDescription="@string/description_button_add_new_comment"
                    android:src="@drawable/ic_baseline_add_circle_outline_24" />

                <ImageButton
                    android:id="@+id/removeNewComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="50dp"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:onClick="@{()-> viewmodel.removeEditText()}"
                    android:contentDescription="@string/description_button_add_new_comment"
                    android:src="@drawable/ic_baseline_remove_circle_outline_24" />
            </LinearLayout>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="173dp"
                android:layout_height="42dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/purple_700"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:maxLines="1"
                android:onClick="@{() -> viewmodel.displayDatePicker()}"
                android:text="@={viewmodel.editTextDate}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:text="@{@string/dollasingTotal(viewmodel.itemsTotal)}"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:visibility="@{viewmodel.showTotal}"
                tools:text="@string/total" />


            <Button
                android:id="@+id/okbutton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:onClick="@{()-> viewmodel.onSendToDatabase()}"
                android:text="@string/add" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>